# MiniNN

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: NeuralNetConfig.cmake.in  neuralnet.pc.in
examples/: xor.c
include/: nn.h  nn_internals.h
src/: nn.c
tests/: test_nn.c
